--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     </script>
   </head>
   <body>
+    <div id="overlays"></div>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
